<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="base_url">http://10.0.3.2:8080</string>
    <string name="app_name">SNS Ilmoitus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="declare">indienen</string>
    <string name="log_out">uitloggen</string>
    <string name="overvieuw">overzicht</string>
    <string name="settings">instellingen</string>
    <string name="title_activity_declare">DeclareActivity</string>
    <string name="title_activity_declare_item">DeclareItemActivity</string>
    <string name="prompt_spinner"></string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="pick_date">Selecteer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_declare_line">DeclareLineActivity</string>
    <string name="addImage">Afbeelding Toevoegen</string>
    <string name="lbl_register">LOGIN</string>
    <string name="lbl_signin">Sign in</string>
    <string name="connection_warning">U bent niet verbonden met het internet!</string>
    <string name="copyright">SNS Ilmoitus APP 2014©</string>
    
    <string name="bekijk">Bekijken</string>
    <string name="bewerk">Bewerken</string>
    
    <!-- labels voor error meldingen -->
    <string name="label_date_hint">%1$s</string>

</resources>
