<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    
        <Button
            android:id="@+id/buttonOvervieuw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/overvieuw"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonDeclare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDeclareButtonClick"
            android:text="@string/declare"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/settings"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/log_out"
            android:textSize="12sp" />
</LinearLayout>
