<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RelativeLayout" >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/Container"
            android:orientation="vertical" >

            <com.ilmoitus.croscutting.CustomTextView
                style="@style/TextViewTitle"
                android:text="Declaratie indienen" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/dottedline" />

            <com.ilmoitus.croscutting.CustomTextView
                style="@style/TextViewSubTitle"
                android:text="Datum:" />

            <LinearLayout style="@style/ContainerItem" >

                <EditText
                    android:id="@+id/editTextDate"
                    style="@style/ContainerItem"
                    android:layout_width="0dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="3"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:maxLines="1"
                    android:onClick="showDatePickerDialog"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>

                <Button
                    style="@style/Button"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:onClick="showDatePickerDialog"
                    android:text="@string/pick_date" />
            </LinearLayout>

            <com.ilmoitus.croscutting.CustomTextView
                style="@style/TextViewSubTitle"
                android:text="Declaratiesoort:" />

            <Spinner
                android:id="@+id/spinnerDeclarationType"
                style="@style/Spinner"
                android:prompt="@string/prompt_spinner" />

            <Spinner
                android:id="@+id/spinnerDeclarationSubType"
                style="@style/Spinner"
                android:prompt="@string/prompt_spinner" />

            <com.ilmoitus.croscutting.CustomTextView
                style="@style/TextViewSubTitle"
                android:text="Bedrag:" />

            <EditText
                android:id="@+id/editCurrency"
                style="@style/EditText"
                android:digits="0123456789,"
                android:hint="Bedrag"
                android:inputType="numberDecimal" />

            <com.ilmoitus.croscutting.CustomTextView
                style="@style/TextViewSubTitle"
                android:text="Opmerkingen:" />

            <MultiAutoCompleteTextView
                android:id="@+id/commentTextView"
                style="@style/ContainerItem" />

            <LinearLayout style="@style/ContainerItemWithMarginTop" >

                <Button
                    android:id="@+id/buttonCancel"
                    style="@style/ContainerButtonCommit"
                    android:layout_marginRight="2dp"
                    android:text="@string/cancel" 
                    android:onClick="onCancelButtonClick"/>

                <Button
                    android:id="@+id/buttonAdd"
                    style="@style/ContainerButtonCommit"
                    android:layout_marginLeft="2dp"
                    android:text="@string/add" 
                    android:onClick="onAddButtonClick"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>